ENH/DOC/TST: fem_2d analytic tests, scaling test metrics, config+scripting doc, .xx .yy unified access from DomainDecomposition

--- a/doc/tutorials/04_confined_fluids.ipynb
+++ b/doc/tutorials/04_confined_fluids.ipynb
@@ -376,7 +376,7 @@
     "tau = h**2 / (12 * kin_visc)\n",
     "cT = myProblem.pressure.v_sound\n",
     "k_crit = 6. * kin_visc / (h**2 * cT)\n",
-    "x = myProblem.topo.x[1:-1, 1]\n",
+    "x = myProblem.topo.xx[1:-1, 1]\n",
     "\n",
     "# Let's initialize the system with a shear wave\n",
     "myProblem.q[2, 1:-1, :] = np.sin(kn * x)[:, None]\n",
@@ -430,7 +430,7 @@
     "tau = h**2 / (12 * kin_visc)\n",
     "cT = myProblem.pressure.v_sound\n",
     "k_crit = 6. * kin_visc / (h**2 * cT)\n",
-    "x = myProblem.topo.x[1:-1, 1]\n",
+    "x = myProblem.topo.xx[1:-1, 1]\n",
     "\n",
     "# Let's initialize the system with a shear wave\n",
     "myProblem.q[1, 1:-1, :] = np.sin(kn * x)[:, None]\n",
