--- a/doc/tutorials/12_fem_2d_examples.ipynb
+++ b/doc/tutorials/12_fem_2d_examples.ipynb
@@ -126,6 +126,75 @@
   },
   {
    "cell_type": "markdown",
+   "id": "qszxkkxmdjk",
+   "metadata": {},
+   "source": [
+    "## Lid-Driven Cavity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78woo8ma18u",
+   "metadata": {},
+   "source": [
+    "The lid-driven cavity is a classic CFD benchmark: a closed square box with stationary walls on 3 sides and a moving top wall (lid).\n",
+    "\n",
+    "Features of this use case:\n",
+    "- Lid velocity $U = 0.5$ m/s at north boundary\n",
+    "- All other walls stationary (no-slip)\n",
+    "- Re = $\\rho U L / \\mu$ = 1 (low Reynolds number)\n",
+    "- Uses in-plane viscous diffusion terms (R23xy, R23yx) for true 2D flow\n",
+    "\n",
+    "The moving lid drives a recirculating vortex pattern.\n",
+    "\n",
+    "$\\rightarrow$ **[YAML File](./examples/lid_driven_cavity.yaml)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "xekj202mba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from GaPFlow.problem import Problem\n",
+    "import numpy as np\n",
+    "\n",
+    "problem = Problem.from_yaml(\"examples/lid_driven_cavity.yaml\")\n",
+    "\n",
+    "# BC callback for consistent wall velocity at lid\n",
+    "# Without this, constant jx with varying rho leads to varying wall velocity u = jx/rho\n",
+    "def jx_lid(problem, boundary, ghost_slice, interior_slice):\n",
+    "    \"\"\"Impose constant velocity u_wall at north lid: jx = rho * u_wall.\"\"\"\n",
+    "    u_wall = 0.5\n",
+    "    rho_ghost = problem.q[0][ghost_slice]\n",
+    "    return rho_ghost * u_wall\n",
+    "\n",
+    "problem.set_bc_function('jx', 'N', jx_lid)\n",
+    "\n",
+    "# Initialize with uniform density, zero velocity\n",
+    "problem.q[0][:] = 1.0\n",
+    "problem.q[1][:] = 0.0\n",
+    "problem.q[2][:] = 0.0\n",
+    "\n",
+    "problem.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "p8a5xff17ag",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys; sys.path.insert(0, '.')\n",
+    "from utils.plotting import plot_lid_driven_cavity  # type: ignore\n",
+    "\n",
+    "fig = plot_lid_driven_cavity(problem)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4858738d",
    "metadata": {},
    "source": [
@@ -495,8 +564,8 @@
     "h_undeformed = problem.topo.h_undeformed[1:-1, 1:-1]\n",
     "\n",
     "# Get coordinates\n",
-    "x = problem.topo.x[1:-1, 1:-1]\n",
-    "y = problem.topo.y[1:-1, 1:-1]\n",
+    "x = problem.topo.xx[1:-1, 1:-1]\n",
+    "y = problem.topo.yy[1:-1, 1:-1]\n",
     "\n",
     "# Common colormap and z-axis limits for both plots\n",
     "vmin = min(h_undeformed.min(), h_deformed.min())\n",
@@ -555,8 +624,8 @@
     "p_field = problem.pressure.pressure[1:-1, 1:-1]\n",
     "\n",
     "# Get coordinates\n",
-    "x = problem.topo.x[1:-1, 1:-1]\n",
-    "y = problem.topo.y[1:-1, 1:-1]\n",
+    "x = problem.topo.xx[1:-1, 1:-1]\n",
+    "y = problem.topo.yy[1:-1, 1:-1]\n",
     "\n",
     "# Create figure (same width as one subplot in the first figure)\n",
     "fig = plt.figure(figsize=(8, 5), layout='constrained')\n",
@@ -657,8 +726,8 @@
     "T_field = problem.energy.temperature[1:-1, 1:-1]\n",
     "\n",
     "# Get coordinates\n",
-    "x = problem.topo.x[1:-1, 1:-1]\n",
-    "y = problem.topo.y[1:-1, 1:-1]\n",
+    "x = problem.topo.xx[1:-1, 1:-1]\n",
+    "y = problem.topo.yy[1:-1, 1:-1]\n",
     "\n",
     "# Create 2D contour/heatmap plot\n",
     "fig, ax = plt.subplots(figsize=(6, 4), layout='constrained')\n",
@@ -692,8 +761,8 @@
     "q_top, q_bot = get_heatflux_2d(problem)\n",
     "\n",
     "# Get coordinates (inner cells only, excluding ghost cells)\n",
-    "x = problem.topo.x[1:-1, 1:-1]\n",
-    "y = problem.topo.y[1:-1, 1:-1]\n",
+    "x = problem.topo.xx[1:-1, 1:-1]\n",
+    "y = problem.topo.yy[1:-1, 1:-1]\n",
     "\n",
     "# Create 2-panel plot\n",
     "fig, axes = plt.subplots(1, 2, figsize=(14, 5), layout='constrained')\n",
@@ -843,8 +912,8 @@
     "T_field = problem.energy.temperature[1:-1, 1:-1]\n",
     "\n",
     "# Get coordinates\n",
-    "x = problem.topo.x[1:-1, 1:-1]\n",
-    "y = problem.topo.y[1:-1, 1:-1]\n",
+    "x = problem.topo.xx[1:-1, 1:-1]\n",
+    "y = problem.topo.yy[1:-1, 1:-1]\n",
     "\n",
     "# Create figure\n",
     "fig = plt.figure(figsize=(8, 5), layout='constrained')\n",
