TST: Bernoulli and temperature diffusion added to fem_2d analytic tests

--- a/doc/tutorials/14_FEM2d_analytic.ipynb
+++ b/doc/tutorials/14_FEM2d_analytic.ipynb
@@ -5,9 +5,14 @@
    "id": "a1b2c3d4",
    "metadata": {},
    "source": [
-    "<h1>Analytical Validation Tests for 2D FEM Solver</h1>\n",
+    "---\n",
     "\n",
-    "This notebook contains validation tests comparing numerical solutions against analytical results."
+    "**Analytical Validation Tests for 2D FEM Solver**\n",
+    "\n",
+    "- Poiseuille Flow: in-plane shear, no-slip at walls\n",
+    "- Couette Flow: in-plane shear, wall velocity\n",
+    "- Bernoulli Venturi: inertia terms\n",
+    "---"
    ]
   },
   {
@@ -255,6 +260,288 @@
     "\n",
     "plt.suptitle('2D Couette Flow Validation', fontweight='bold')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "usf9nm799g",
+   "metadata": {},
+   "source": [
+    "## Bernoulli Venturi Nozzle\n",
+    "\n",
+    "Inviscid flow through a symmetric venturi channel, validating convective momentum terms.\n",
+    "\n",
+    "**Setup:**\n",
+    "- Symmetric venturi: $h_{\\mathrm{inlet}} = 1\\,\\mathrm{mm} \\to h_{\\mathrm{throat}} = 0.5\\,\\mathrm{mm} \\to h_{\\mathrm{outlet}} = 1\\,\\mathrm{mm}$\n",
+    "- Smooth cosine transitions between sections\n",
+    "- DH EOS (nearly incompressible)\n",
+    "- Inlet: prescribed mass flux $j_x = \\rho \\cdot v = 5000\\,\\mathrm{kg/(m^2 \\cdot s)}$\n",
+    "- Outlet: prescribed density $\\rho = 1000\\,\\mathrm{kg/m^3}$\n",
+    "- Convective terms active (`R22xx`, `R22yx`, etc.)\n",
+    "- Custom topography via `topo.set_mapped_height()`\n",
+    "\n",
+    "**Analytical predictions (Bernoulli equation):**\n",
+    "\n",
+    "$$v \\cdot h = \\mathrm{const} \\quad \\Rightarrow \\quad v_{\\mathrm{throat}} = v_{\\mathrm{inlet}} \\cdot \\frac{h_{\\mathrm{inlet}}}{h_{\\mathrm{throat}}} = 2 \\cdot v_{\\mathrm{inlet}}$$\n",
+    "\n",
+    "$$p + \\frac{1}{2}\\rho v^2 = \\mathrm{const} \\quad \\Rightarrow \\quad \\Delta p = \\frac{1}{2}\\rho(v_{\\mathrm{throat}}^2 - v_{\\mathrm{inlet}}^2)$$\n",
+    "\n",
+    "$\\rightarrow$ **[YAML File](../../tests/configs/bernoulli_venturi.yaml)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "m5stl6mzse8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from GaPFlow.problem import Problem\n",
+    "from GaPFlow.models.pressure import eos_pressure\n",
+    "\n",
+    "# Geometry parameters\n",
+    "H_INLET, H_THROAT = 1.0e-3, 0.5e-3\n",
+    "X_RAMP_START, X_RAMP_END = 0.03, 0.07\n",
+    "THROAT_HALF_WIDTH = 0.005\n",
+    "RHO0, V_INLET = 1000.0, 5.0\n",
+    "\n",
+    "def venturi_topography(xx):\n",
+    "    \"\"\"Symmetric venturi with cosine transitions.\"\"\"\n",
+    "    x_mid = (X_RAMP_START + X_RAMP_END) / 2\n",
+    "    ramp_len = x_mid - THROAT_HALF_WIDTH - X_RAMP_START\n",
+    "    \n",
+    "    # Distance from throat edge, clipped to [0, ramp_len]\n",
+    "    dist = np.clip(np.abs(xx - x_mid) - THROAT_HALF_WIDTH, 0, ramp_len)\n",
+    "    xi = dist / ramp_len\n",
+    "    \n",
+    "    return np.where(\n",
+    "        (xx >= X_RAMP_START) & (xx <= X_RAMP_END),\n",
+    "        (H_INLET + H_THROAT)/2 - (H_INLET - H_THROAT)/2 * np.cos(np.pi * xi),\n",
+    "        H_INLET\n",
+    "    )\n",
+    "\n",
+    "# Initialize problem\n",
+    "problem = Problem.from_yaml(\"../../tests/configs/bernoulli_venturi.yaml\")\n",
+    "\n",
+    "# Set Venturi topography and plot\n",
+    "h_venturi = venturi_topography(problem.topo.xx)\n",
+    "problem.topo.set_mapped_height(h_venturi)\n",
+    "\n",
+    "#problem.plot_topo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3c2da66",
+   "metadata": {},
+   "source": [
+    "Now run the problem:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65f85999",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "problem.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "m4rlajqy1t8",
+   "metadata": {},
+   "source": [
+    "Compare with Bernoulli predictions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19q1jtf0we7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract centerline data\n",
+    "rho_b = problem.q[0][1:-1, 1:-1]\n",
+    "jx_b = problem.q[1][1:-1, 1:-1]\n",
+    "h_b = problem.topo.h[1:-1, 1:-1]\n",
+    "j_center = rho_b.shape[1] // 2\n",
+    "\n",
+    "dx_b = problem.grid['dx']\n",
+    "x_b = np.arange(rho_b.shape[0]) * dx_b + dx_b / 2\n",
+    "vx_b = jx_b[:, j_center] / rho_b[:, j_center]\n",
+    "p_b = np.asarray(eos_pressure(rho_b[:, j_center], problem.prop))\n",
+    "\n",
+    "# Theory: velocity from mass conservation, pressure from Bernoulli\n",
+    "v_theory = V_INLET * H_INLET / h_b[:, j_center]\n",
+    "p_ref = p_b[-1]\n",
+    "v_ref = V_INLET * H_INLET / h_b[-1, j_center]\n",
+    "p_theory = p_ref + 0.5 * RHO0 * (v_ref**2 - v_theory**2)\n",
+    "\n",
+    "# Compute errors\n",
+    "inlet = x_b < X_RAMP_START\n",
+    "throat = (x_b >= 0.045) & (x_b <= 0.055)\n",
+    "\n",
+    "v_in, v_throat = vx_b[inlet].mean(), vx_b[throat].mean()\n",
+    "p_in, p_throat = p_b[inlet].mean(), p_b[throat].mean()\n",
+    "\n",
+    "v_throat_theory = V_INLET * H_INLET / H_THROAT\n",
+    "dp_theory = 0.5 * RHO0 * (v_throat_theory**2 - V_INLET**2)\n",
+    "dp_sim = p_in - p_throat\n",
+    "\n",
+    "print(f\"Velocity at throat: {v_throat:.2f} m/s (theory: {v_throat_theory:.2f} m/s)\")\n",
+    "print(f\"Velocity ratio: {v_throat/v_in:.3f} (theory: 2.0)\")\n",
+    "print(f\"Pressure drop: {dp_sim:.1f} Pa (theory: {dp_theory:.1f} Pa)\")\n",
+    "print(f\"Pressure drop error: {abs(dp_sim - dp_theory)/dp_theory*100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "heb8adznm0k",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot comparison\n",
+    "x_mm = x_b * 1000  # Convert to mm\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(7, 5), facecolor='white', constrained_layout=True)\n",
+    "\n",
+    "def vlines(ax):\n",
+    "    ax.axvline(X_RAMP_START*1000, color='gray', ls='--', alpha=0.5)\n",
+    "    ax.axvline(X_RAMP_END*1000, color='gray', ls='--', alpha=0.5)\n",
+    "\n",
+    "# 1. Gap height\n",
+    "axes[0,0].plot(x_mm, h_b[:, j_center]*1000, 'b-', lw=2)\n",
+    "vlines(axes[0,0])\n",
+    "axes[0,0].set(xlabel='x [mm]', ylabel='h [mm]', title='Gap Height')\n",
+    "\n",
+    "# 2. Velocity\n",
+    "axes[0,1].plot(x_mm, vx_b, 'b-', lw=2, label='Simulation')\n",
+    "axes[0,1].plot(x_mm, v_theory, 'r--', lw=1.5, label='Theory')\n",
+    "vlines(axes[0,1])\n",
+    "axes[0,1].set(xlabel='x [mm]', ylabel='v [m/s]', title='Velocity')\n",
+    "axes[0,1].legend()\n",
+    "\n",
+    "# 3. Pressure\n",
+    "axes[1,0].plot(x_mm, p_b/1000, 'b-', lw=2, label='Simulation')\n",
+    "axes[1,0].plot(x_mm, p_theory/1000, 'r--', lw=1.5, label='Theory')\n",
+    "vlines(axes[1,0])\n",
+    "axes[1,0].set(xlabel='x [mm]', ylabel='p [kPa]', title='Pressure')\n",
+    "axes[1,0].legend()\n",
+    "\n",
+    "# 4. Momentum flux\n",
+    "axes[1,1].plot(x_mm, jx_b[:, j_center], 'b-', lw=2)\n",
+    "vlines(axes[1,1])\n",
+    "axes[1,1].set(xlabel='x [mm]', ylabel='$j_x$ [kg/(m$^2$s)]', title='Momentum Flux')\n",
+    "\n",
+    "fig.suptitle('Bernoulli Venturi Validation', fontweight='bold')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b548dc1",
+   "metadata": {},
+   "source": [
+    "## Diffusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc12aa75",
+   "metadata": {},
+   "source": [
+    "Dynamic simulation of 2D heat diffusion with comparison to the analytic solution.\n",
+    "\n",
+    "Setup:\n",
+    "- Dirichlet temperature boundary conditions in x: T=0 at both ends\n",
+    "- Periodic boundary conditions in y\n",
+    "- Initial temperature: sine profile $T(x,0) = T_{max} * sin(π*x_{norm})$ constant over y\n",
+    "- No wall movement/fluid flow $(U=0, V=0)$, pure diffusion\n",
+    "\n",
+    "Since the initial condition and boundary conditions are uniform in y, and y has periodic BCs, the solution should match the 1D analytic solution:\n",
+    "\n",
+    "$$T(x,t) = T_{max} \\cdot e^{-\\lambda^2 t} \\cdot \\sin\\left(\\pi \\cdot x_{norm}\\right)$$\n",
+    "\n",
+    "where $\\lambda = \\sqrt{\\alpha} \\cdot \\frac{\\pi}{L_{eff}}$ and $\\alpha = \\frac{k}{c_v \\rho}$.\n",
+    "\n",
+    "$\\rightarrow$ **[YAML File](./examples/temp_diffusion_2d.yaml)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf05ce09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2D Temperature diffusion\n",
+    "import numpy as np\n",
+    "from GaPFlow.problem import Problem\n",
+    "\n",
+    "# Store temperature history for comparison\n",
+    "T_history = {'time': [], 'T': []}\n",
+    "\n",
+    "problem = Problem.from_yaml(\"examples/temp_diffusion_2d.yaml\")\n",
+    "\n",
+    "def track_temperature():\n",
+    "    dt = problem.numerics['dt']\n",
+    "    t = problem.step * dt\n",
+    "    T_history['time'].append(t)\n",
+    "    # Extract T along x at mid-y (should be constant in y)\n",
+    "    T_history['T'].append(problem.energy.temperature[:, problem.grid['Ny']//2 + 1].copy())\n",
+    "\n",
+    "problem.add_callback(track_temperature)\n",
+    "problem.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9474ba7",
+   "metadata": {},
+   "source": [
+    "Animation of the comparison to the analytic solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a1e889c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compare with analytic solution\n",
+    "import sys; sys.path.insert(0, '.')\n",
+    "from utils.plotting import animate_comparison  # type: ignore\n",
+    "from GaPFlow.utils import heat_equation_1d\n",
+    "\n",
+    "# Get grid parameters\n",
+    "L = problem.grid['Lx']\n",
+    "Nx = problem.grid['Nx']\n",
+    "dx = problem.grid['dx']\n",
+    "cv = problem.energy_spec['cv']\n",
+    "k = problem.energy_spec['k']\n",
+    "rho = problem.prop['rho0']\n",
+    "T_max = problem.energy_spec['T0'][2]\n",
+    "\n",
+    "# Cell centers including ghost cells: -dx/2, dx/2, 3dx/2, ..., Lx+dx/2\n",
+    "x_vec = np.arange(Nx + 2) * dx - dx / 2\n",
+    "t_vec = np.array(T_history['time'])\n",
+    "\n",
+    "# For half_sine_ghost: T = sin(pi * (x + dx/2) / (Lx + dx))\n",
+    "# Zeros at ghost cell centers: x = -dx/2 and x = Lx + dx/2\n",
+    "# This matches where FEM 2D enforces Dirichlet BC\n",
+    "L_eff = L + dx\n",
+    "x_shifted = x_vec + dx / 2  # shift so x_shifted=0 at x=-dx/2\n",
+    "\n",
+    "T_analytic = heat_equation_1d(L_eff, cv, k, rho, T_max, x_shifted, t_vec)\n",
+    "T_numeric = np.array(T_history['T'])\n",
+    "\n",
+    "animate_comparison(x_vec, t_vec, T_numeric, T_analytic, L)"
    ]
   }
  ],
