WIP: increase memory efficiency and stabilization robustness

--- a/doc/tutorials/12_fem_2d_examples.ipynb
+++ b/doc/tutorials/12_fem_2d_examples.ipynb
@@ -164,11 +164,11 @@
     "\n",
     "# BC callback for consistent wall velocity at lid\n",
     "# Without this, constant jx with varying rho leads to varying wall velocity u = jx/rho\n",
-    "def jx_lid(problem, boundary, ghost_slice, interior_slice):\n",
-    "    \"\"\"Impose constant velocity u_wall at north lid: jx = rho * u_wall.\"\"\"\n",
-    "    u_wall = 0.5\n",
-    "    rho_ghost = problem.q[0][ghost_slice]\n",
-    "    return rho_ghost * u_wall\n",
+    "def jx_lid(ctx):\n",
+    "      \"\"\"ctx is a BCContext with: problem, required_shape, ghost_slice, interior_slice, x_norm, y_norm\"\"\"\n",
+    "      u_wall = 1.0\n",
+    "      rho_ghost = ctx.problem.q[0][ctx.ghost_slice]\n",
+    "      return rho_ghost * u_wall\n",
     "\n",
     "problem.set_bc_function('jx', 'N', jx_lid)\n",
     "\n",
