--- a/doc/tutorials/A_config.ipynb
+++ b/doc/tutorials/A_config.ipynb
@@ -18,12 +18,12 @@
     "| Field | Type | Default | Description |\n",
     "|-------|------|---------|-------------|\n",
     "| `output` | `str` | `'example'` | Base name for the output directory. |\n",
-    "| `write_freq` | `int` | `1000` | Number of iterations between writing output files. |\n",
+    "| `write_freq` | `int` | `1000` | Number of time steps between writing output files and progress update in console. |\n",
     "| `use_tstamp` | `bool` | `True` | Prepend timestamp to output directory name. |\n",
     "| `save_output` | `bool` | `True` | Write output files to disk. |\n",
     "| `print_progress` | `bool` | `True` | Print iteration progress to console. |\n",
-    "| `print_metrics` | `bool` | `False` | Print convergence metrics during simulation. |\n",
-    "| `output_plots` | `bool` | `False` | Generate plot files during simulation. |"
+    "| `print_metrics` | `bool` | `False` | Print convergence metrics after simulation. |\n",
+    "| `output_plots` | `bool` | `False` | Generate plot files after simulation. |"
    ]
   },
   {
