ENH: more intuitive fem solver term specification and general clean-up

--- a/doc/tutorials/11_fem_2d_theory.ipynb
+++ b/doc/tutorials/11_fem_2d_theory.ipynb
@@ -658,12 +658,8 @@
     "| `matrix_coo` | MatrixCOOPattern | Sparse matrix structure |\n",
     "| `rhs` | RHSPattern | RHS vector structure |\n",
     "| `jacobian_terms` | dict | Maps <code style=\"color:#c586c0\">TermKey</code> → `JacobianTermMap` |\n",
-    "| `rhs_terms` | dict | Maps <code style=\"color:#c586c0\">TermKey</code> → `RHSTermMap` |\n",
-    "| `scaling` | ScalingInfo | Diagonal scaling factors (see below) |\n",
-    "| `dx`, `dy` | float | Grid spacing |\n",
-    "| `nb_vars` | int | Number of variables (3 or 4) |\n",
-    "| `nb_inner_pts` | int | Number of inner grid points |\n",
-    "| `nb_global_pts` | int | Total global grid points |"
+    "\n",
+    "The `get_petsc_info()` method extracts PETSc-specific assembly info, and `build_scaling()` constructs diagonal scaling factors."
    ]
   },
   {
@@ -895,7 +891,7 @@
     "| `solver_fem_2d.py` | Main 2D FEM solver: Newton iteration, assembly dispatch, time-stepping |\n",
     "| `fem_2d/elements.py` | <code style=\"color:#c586c0\">TriangleQuadrature</code> - shape functions, derivatives, interpolation operators |\n",
     "| `fem_2d/terms.py` | <code style=\"color:#c586c0\">NonLinearTerm</code>, `get_active_terms()`, residual terms (`R11x`, `R11y`, ...) |\n",
-    "| `fem_2d/assembly_layout.py` | <code style=\"color:#c586c0\">FEMAssemblyLayout</code>, <code style=\"color:#c586c0\">MatrixCOOPattern</code>, <code style=\"color:#c586c0\">RHSPattern</code>, <code style=\"color:#c586c0\">ScalingInfo</code>, <code style=\"color:#c586c0\">JacobianTermMap</code>, <code style=\"color:#c586c0\">RHSTermMap</code>, <br> <code style=\"color:#c586c0\">PETScAssemblyInfo</code> - precomputed indexing, local-global translation, scaling, and weightings |\n",
+    "| `fem_2d/assembly_layout.py` | <code style=\"color:#c586c0\">FEMAssemblyLayout</code>, <code style=\"color:#c586c0\">MatrixCOOPattern</code>, <code style=\"color:#c586c0\">RHSPattern</code>, <code style=\"color:#c586c0\">ScalingInfo</code>, <code style=\"color:#c586c0\">JacobianTermMap</code>, <br> <code style=\"color:#c586c0\">PETScAssemblyInfo</code> - precomputed indexing, local-global translation, scaling, and weightings |\n",
     "| `fem_2d/grid_index.py` | <code style=\"color:#c586c0\">GridIndexManager</code> - local/global index masks, BC handling, stencil connectivity |\n",
     "| `fem_2d/quad_fields.py` | <code style=\"color:#c586c0\">QuadFieldManager</code> - field storage, nodal→quadrature interpolation |\n",
     "| `fem_2d/petsc_system.py` | <code style=\"color:#c586c0\">PETScSystem</code> - distributed matrix assembly and KSP linear solve (parallel/serial) |\n",
