--- a/doc/tutorials/12_fem_2d_examples.ipynb
+++ b/doc/tutorials/12_fem_2d_examples.ipynb
@@ -101,7 +101,11 @@
    "id": "7c892aab",
    "metadata": {},
    "source": [
-    "We want to observe the stability of flow build-up by manually setting flow to zero after initializing the simulation.\n",
+    "We want to observe the stability of dynamic flow build-up by manually setting flow to zero after initializing the simulation.\n",
+    "\n",
+    "**Features:**\n",
+    "- To overwrite the default flow initialization, we set $j_x = 0$ by `problem.q[1] = 0.`\n",
+    "- We track the average velocity in our domain by creating a callback function that measures $u_{avg}$\n",
     "\n",
     "$\\rightarrow$ **[YAML File](./examples/couette_2d.yaml)**"
    ]
@@ -115,13 +119,36 @@
    "source": [
     "from GaPFlow.problem import Problem\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "problem = Problem.from_yaml(\"examples/couette_2d.yaml\")\n",
-    "problem.q[1] = 0. # Set jx = 0 everywhere\n",
+    "problem.q[1] = 0.  # Start with zero x-momentum\n",
     "\n",
+    "# Track average velocity convergence\n",
+    "history = {'time': [], 'vx_avg': []}\n",
+    "\n",
+    "def track_velocity():\n",
+    "    rho = problem.q[0][1:-1, 1:-1]\n",
+    "    jx = problem.q[1][1:-1, 1:-1]\n",
+    "    vx_avg = (jx / rho).mean()\n",
+    "    history['time'].append(problem.simtime)\n",
+    "    history['vx_avg'].append(vx_avg)\n",
+    "\n",
+    "problem.add_callback(track_velocity)\n",
     "problem.run()\n",
     "\n",
-    "problem.animate()"
+    "# Plot velocity convergence\n",
+    "U = problem.geo['U']\n",
+    "v_steady = U / 2  # Couette: average velocity = U/2\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(6, 3.5), constrained_layout=True)\n",
+    "ax.plot(history['time'], history['vx_avg'], 'b-', lw=2, label='Simulation')\n",
+    "ax.axhline(v_steady, color='r', ls='--', label=f'Theoretical steady state')\n",
+    "ax.set_xlabel('Time [s]')\n",
+    "ax.set_ylabel('Average velocity $\\\\bar{v}_x$ [m/s]')\n",
+    "ax.set_title('Couette Flow: Velocity Build-up')\n",
+    "ax.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -137,13 +164,26 @@
    "id": "78woo8ma18u",
    "metadata": {},
    "source": [
-    "The lid-driven cavity is a classic CFD benchmark: a closed square box with stationary walls on 3 sides and a moving top wall (lid).\n",
+    "Just an experiment to test customized boundary conditions. \n",
     "\n",
-    "Features of this use case:\n",
-    "- Lid velocity $U = 0.5$ m/s at north boundary\n",
-    "- All other walls stationary (no-slip)\n",
-    "- Re = $\\rho U L / \\mu$ = 1 (low Reynolds number)\n",
-    "- Uses in-plane viscous diffusion terms (R23xy, R23yx) for true 2D flow\n",
+    "Note that imposing a wall moving with constant velocity is not straightforward because density changes along the boundary need to be accounted for since $j_x = \\rho \\cdot u$.\n",
+    "\n",
+    "**Features:**\n",
+    "- Customized BC: Lid velocity $U = 0.5$ m/s at north boundary with `jx_lid` bc function\n",
+    "- All other walls stationary by setting Dirichlet mass flux $j_x = 0$ at `W`, `E` and $j_y=0$ at `S`, `N`\n",
+    "- Deactivate gap-averaged wall stresses and activate in-plane shear \n",
+    "\n",
+    "```yaml\n",
+    "grid:\n",
+    "    xW: ['N', 'D', 'N']\n",
+    "    xW_D: [null, 0.0, 0.0]\n",
+    "    # ...\n",
+    "\n",
+    "fem_solver:\n",
+    "    physics:\n",
+    "        gap_shear: False\n",
+    "        plane_shear: True\n",
+    "```\n",
     "\n",
     "The moving lid drives a recirculating vortex pattern.\n",
     "\n",
@@ -160,22 +200,16 @@
     "from GaPFlow.problem import Problem\n",
     "import numpy as np\n",
     "\n",
+    "U_WALL = 1.0  # Lid velocity\n",
+    "\n",
     "problem = Problem.from_yaml(\"examples/lid_driven_cavity.yaml\")\n",
     "\n",
-    "# BC callback for consistent wall velocity at lid\n",
-    "# Without this, constant jx with varying rho leads to varying wall velocity u = jx/rho\n",
+    "# BC function for consistent wall velocity at lid\n",
     "def jx_lid(ctx):\n",
-    "      \"\"\"ctx is a BCContext with: problem, required_shape, ghost_slice, interior_slice, x_norm, y_norm\"\"\"\n",
-    "      u_wall = 1.0\n",
     "      rho_ghost = ctx.problem.q[0][ctx.ghost_slice]\n",
-    "      return rho_ghost * u_wall\n",
+    "      return rho_ghost * U_WALL\n",
     "\n",
     "problem.set_bc_function('jx', 'N', jx_lid)\n",
-    "\n",
-    "# Initialize with uniform density, zero velocity\n",
-    "problem.q[0][:] = 1.0\n",
-    "problem.q[1][:] = 0.0\n",
-    "problem.q[2][:] = 0.0\n",
     "\n",
     "problem.run()"
    ]
