--- a/doc/tutorials/14_fem_2d_analytic.ipynb
+++ b/doc/tutorials/14_fem_2d_analytic.ipynb
@@ -20,8 +20,6 @@
    "id": "b2c3d4e5",
    "metadata": {},
    "source": [
-    "## Poiseuille Flow\n",
-    "\n",
     "Pressure-driven flow in $x$-direction with no-slip walls as $y$-boundary condition.\n",
     "\n",
     "**Setup:**\n",
@@ -37,7 +35,7 @@
     "\n",
     "where $y_{\\mathrm{lo}} = -\\Delta y/2$ and $y_{\\mathrm{hi}} = L_y + \\Delta y/2$ account for BCs applied at ghost cell centers.\n",
     "\n",
-    "$\\rightarrow$ **[YAML File](./examples/poiseuille_2d_body_force.yaml)**"
+    "$\\rightarrow$ **[YAML File](../../tests/configs/poiseuille_2d_body_force.yaml)**"
    ]
   },
   {
@@ -51,7 +49,7 @@
     "import matplotlib.pyplot as plt\n",
     "from GaPFlow.problem import Problem\n",
     "\n",
-    "problem = Problem.from_yaml(\"examples/poiseuille_2d_body_force.yaml\")\n",
+    "problem = Problem.from_yaml(\"../../tests/configs/poiseuille_2d_body_force.yaml\")\n",
     "problem.q[0][:] = 1.0  # Uniform density\n",
     "problem.q[1][:] = 0.0  # Zero momentum\n",
     "problem.q[2][:] = 0.0\n",
@@ -160,7 +158,7 @@
     "\n",
     "where $y_{\\mathrm{lo}} = -\\Delta y/2$ and $y_{\\mathrm{hi}} = L_y + \\Delta y/2$ account for BCs applied at ghost cell centers.\n",
     "\n",
-    "$\\rightarrow$ **[YAML File](./examples/couette_2d_wall_velocity.yaml)**"
+    "$\\rightarrow$ **[YAML File](../../tests/configs/couette_2d_wall_velocity.yaml)**"
    ]
   },
   {
@@ -174,7 +172,7 @@
     "import matplotlib.pyplot as plt\n",
     "from GaPFlow.problem import Problem\n",
     "\n",
-    "problem_couette = Problem.from_yaml(\"examples/couette_2d_wall_velocity.yaml\")\n",
+    "problem_couette = Problem.from_yaml(\"../../tests/configs/couette_2d_wall_velocity.yaml\")\n",
     "problem_couette.q[0][:] = 1.0  # Uniform density\n",
     "problem_couette.q[1][:] = 0.0  # Zero momentum\n",
     "problem_couette.q[2][:] = 0.0\n",
@@ -469,7 +467,7 @@
     "\n",
     "where $\\lambda = \\sqrt{\\alpha} \\cdot \\frac{\\pi}{L_{eff}}$ and $\\alpha = \\frac{k}{c_v \\rho}$.\n",
     "\n",
-    "$\\rightarrow$ **[YAML File](./examples/temp_diffusion_2d.yaml)**"
+    "$\\rightarrow$ **[YAML File](../../tests/configs/temp_diffusion_2d.yaml)**"
    ]
   },
   {
@@ -486,7 +484,7 @@
     "# Store temperature history for comparison\n",
     "T_history = {'time': [], 'T': []}\n",
     "\n",
-    "problem = Problem.from_yaml(\"examples/temp_diffusion_2d.yaml\")\n",
+    "problem = Problem.from_yaml(\"../../tests/configs/temp_diffusion_2d.yaml\")\n",
     "\n",
     "def track_temperature():\n",
     "    dt = problem.numerics['dt']\n",
