--- a/doc/tutorials/A_config.ipynb
+++ b/doc/tutorials/A_config.ipynb
@@ -265,32 +265,68 @@
     "\n",
     "```yaml\n",
     "fem_solver:\n",
-    "    type: newton_alpha\n",
     "    linear_solver: direct\n",
     "    max_iter: 100\n",
     "    R_norm_tol: 1e-6\n",
-    "    equations:\n",
+    "    physics:\n",
+    "        gap_shear: True\n",
+    "        plane_shear: False\n",
     "        energy: True\n",
     "```\n",
     "\n",
     "| Field | Type | Default | Description |\n",
     "|-------|------|---------|-------------|\n",
-    "| `dynamic` | `bool` | `True` | Use dynamic (time-dependent) solver; `False` for steady-state. |\n",
     "| `type` | `str` | `'newton_alpha'` | Nonlinear solver type. |\n",
     "| `max_iter` | `int` | `100` | Maximum Newton iterations per time step. |\n",
     "| `R_norm_tol` | `float` | `1e-6` | Residual norm convergence tolerance [-]. |\n",
-    "| `alpha` | `float` | `1.0` | Relaxation parameter for Newton updates [-]. |\n",
+    "| `newton_relax` | `float` | `1.0` | Newton update relaxation factor [-]. Values < 1 damp updates for improved stability. |\n",
     "| `linear_solver` | `str` | `'direct'` | Linear solver: `direct`, `iterative`. |\n",
-    "| `pressure_stab_alpha` | `float` | `1000.0` | Pressure stabilization parameter [-]. |\n",
-    "| `momentum_stab_alpha` | `float` | `10000.0` | Momentum stabilization parameter [-]. |\n",
-    "| `energy_stab_alpha` | `float` | `1e8` | Energy stabilization parameter [-]. |\n",
+    "| `pressure_stab_alpha` | `float` | `0.01` | Pressure stabilization parameter [-]. |\n",
+    "| `momentum_stab_alpha` | `float` | `0.1` | Momentum stabilization parameter [-]. |\n",
+    "| `energy_stab_alpha` | `float` | `0.01` | Energy stabilization parameter [-]. |\n",
+    "| `boundary_stab_factor` | `float` | `1.0` | Stabilization multiplier near Dirichlet boundaries [-]. Values > 1 enhance stabilization near walls. |\n",
+    "| `boundary_stab_decay` | `float` | `2.0` | Exponential decay rate for boundary stabilization enhancement [-]. |\n",
+    "| `term_list` | `list` | `None` | Explicit list of residual terms (advanced override). |\n",
     "\n",
-    "### `equations` (nested under `fem_solver`)\n",
+    "### `physics` (nested under `fem_solver`)\n",
+    "\n",
+    "Controls which physical terms are included in the FEM formulation. Mass conservation and pressure gradient terms are always included.\n",
+    "\n",
+    "**Momentum physics:**\n",
+    "\n",
+    "| Field | Type | Default | Description |\n",
+    "|-------|------|---------|-------------|\n",
+    "| `gap_shear` | `bool` | `True` | Gap-averaged wall shear stress (Poiseuille/Couette). |\n",
+    "| `plane_shear` | `bool` | `False` | In-plane viscous diffusion (for 2D cavity flows). |\n",
+    "| `inertia` | `bool` | `False` | Convective acceleration terms. |\n",
+    "| `body_force` | `bool` | `False` | External body forces (for periodic BC simulations). |\n",
+    "\n",
+    "**Energy physics** (require `energy: True`):\n",
     "\n",
     "| Field | Type | Default | Description |\n",
     "|-------|------|---------|-------------|\n",
     "| `energy` | `bool` | `False` | Enable energy equation for thermal coupling. |\n",
-    "| `term_list` | `list` | `None` | Explicit list of residual terms to include; `None` for automatic selection. |"
+    "| `energy_convection` | `bool` | `True` | Convective heat transport. |\n",
+    "| `pressure_work` | `bool` | `True` | Compression/expansion work. |\n",
+    "| `thermal_diffusion` | `bool` | `True` | In-plane heat conduction. |\n",
+    "| `wall_heat_balance` | `bool` | `True` | Heat transfer to/from walls. |\n",
+    "| `wall_shear_work` | `bool` | `True` | Viscous dissipation from wall shear. |\n",
+    "\n",
+    "**Numerical:**\n",
+    "\n",
+    "| Field | Type | Default | Description |\n",
+    "|-------|------|---------|-------------|\n",
+    "| `stabilization` | `bool` | `True` | SUPG/PSPG stabilization for all equations. |\n",
+    "\n",
+    "### Legacy support\n",
+    "\n",
+    "The `equations.energy` syntax is still supported for backward compatibility:\n",
+    "\n",
+    "```yaml\n",
+    "fem_solver:\n",
+    "    equations:\n",
+    "        energy: True\n",
+    "```"
    ]
   },
   {
@@ -299,17 +335,23 @@
    "source": [
     "## <code style=\"color:#569cd6\">energy_spec</code>\n",
     "\n",
-    "Energy equation settings (used when `fem_solver.equations.energy: True`).\n",
+    "Energy equation settings (used when `fem_solver.physics.energy: True`).\n",
     "\n",
     "| Field | Type | Default | Description |\n",
     "|-------|------|---------|-------------|\n",
     "| `cv` | `float` | `718.0` | Specific heat capacity at constant volume [J/(kg·K)]. |\n",
     "| `k` | `float` | `0.13` | Thermal conductivity [W/(m·K)]. |\n",
-    "| `wall_flux_model` | `str` | `'Tz_Robin'` | Wall heat flux model. |\n",
+    "| `wall_flux_model` | `str` | `'Tz_Robin'` | Wall heat flux model: `'Tz_Robin'` (Robin BC) or `'simple'`. |\n",
     "| `h_Robin` | `float` | `1e4` | Robin BC heat transfer coefficient [W/(m²·K)]. |\n",
     "| `T_wall` | `float` | `300.0` | Wall temperature [K]. |\n",
-    "| `alpha_wall` | `float` | `1e5` | Wall thermal diffusivity [m²/s]. |\n",
-    "| `T0` | `float \\| tuple` | `300.0` | Initial temperature [K]. |\n",
+    "| `alpha_wall` | `float` | `1e5` | Wall heat transfer coefficient [W/(m²·K)] (for `simple` model). |\n",
+    "| `T0` | `float \\| list` | `300.0` | Initial temperature [K]. Scalar or list format (see below). |\n",
+    "\n",
+    "**T0 profile formats:**\n",
+    "- Scalar: `300.0` - uniform temperature\n",
+    "- `['uniform', T]` - uniform at temperature T\n",
+    "- `['half_sine', T_min, T_max]` - half-sine profile from T_min to T_max across domain\n",
+    "- `['half_sine_ghost', T_min, T_max]` - half-sine with T=T_min at ghost cell boundaries (for Dirichlet BCs)\n",
     "\n",
     "### Temperature boundary conditions\n",
     "\n",
